Adding events endpoints.
